修改了宠物圈的配色

--- a/HiChongSwift/Base.lproj/Main.storyboard
+++ b/HiChongSwift/Base.lproj/Main.storyboard
@@ -50,19 +50,19 @@
                                     <action selector="mixButtonPressed:" destination="p9z-pG-CIr" eventType="touchUpInside" id="xDy-Yb-5YL"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ypW-M9-ZM6" userLabel="左">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ypW-M9-ZM6" userLabel="左">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="lXI-P2-fcG"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cb5-Lt-ErB" userLabel="中">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cb5-Lt-ErB" userLabel="中">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="fQF-xT-xs7"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Drf-ji-qxV" userLabel="右">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Drf-ji-qxV" userLabel="右">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="s2x-Dp-fBV"/>
